# rust_electroanalysis_cli

./: .gitignore  Cargo.toml  README.md  circuit_models.toml  ecm_search.toml  plot_config.generic_plot_job_blocks_examples.toml  plot_config.plot_type_examples.toml  plot_config.toml
.github/workflows/: ci.yml
config/: analysis.toml  app.toml  calibration.toml  estimation.toml  health.toml  mechanism.toml  parsing.toml  plotting.toml  signal.toml  transient.toml
docs/engineering_specification/: 00_project_overview.md  01_system_requirements.md  02_architecture.md  03_module_specifications.md  04_data_models_and_units.md  05_cli_and_interfaces.md  06_workflows.md  07_scientific_models_and_equations.md  08_validation_and_constraints.md  09_testing_and_quality_assurance.md  10_error_handling_and_diagnostics.md  11_build_release_and_operations.md  12_change_management_playbook.md  13_traceability_matrix.md  14_risk_and_technical_debt_register.md  15_glossary.md  16_open_questions.md  README.md
src/: README.md  calibration_config.rs  cli.rs  estimation_config.rs  health_config.rs  lib.rs  main.rs  mechanism_config.rs  plot_config.rs  plot_runner.rs  regression_mod.rs  search_config.rs  search_runner.rs  signal_config.rs  transient_config.rs  workspace.rs
src/data_file/: README.md  chi_file.rs  data_op.rs  excel_file.rs  input_kind.rs  lib.rs  (+3 more)
tests/: phase0_regression.rs  phase1_domain.rs  phase2_transient.rs  phase3_calibration.rs  phase3_workflow.rs  phase4_mechanism.rs  phase5_signal_health.rs  phase6_estimation.rs  unified_data_loading.rs  xlsx_ingestion.rs
(+130 files in other folders)
