[package]
name = "rust_electroanalysis_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
plotters = "0.3"
image = "0.25.10"
levenberg-marquardt = "0.15.0"
nalgebra = "0.34.2"
nom = "8"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "1.1.2"
genevo = "0.7.1"
rayon = "1.12.0"

[profile.release]
opt-level      = 3
panic          = "abort"
codegen-units  = 1
lto            = "fat"
strip = "symbols"
debug = false
